RP2-775 Update pathway conpletion metrics calculations